--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -26,5 +26,6 @@ jobs:
       - run: yarn
       - run: npm run build --if-present
       - run: cd dist
-      - run: cp -r . /var/www/test/html
+      - run: ls /var/www/test/html
+      - run: sudo cp -r . /var/www/test/html
       - run: sudo service nginx restart
