--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
       - run: yarn
       - run: npm run build --if-present
       - run: cd dist
-      - run: ls /var/www/test/html
+      - run: ls -la
       - run: sudo cp -r . /var/www/test/html
       - run: sudo service nginx restart
