--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
       - run: npm run build --if-present
       - run: cd dist
       - run: ls -la
-      - run: sudo cp -r . /var/www/test/html
-      - run: sudo service nginx restart
+      - run: whoami
+      # - run: sudo cp -r . /var/www/test/html
+      # - run: sudo service nginx restart
