--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,14 @@ jobs:
           cache: "npm"
       - run: yarn
       - run: npm run build --if-present
-      - run: cd dist
-      - run: ls -la
-      - run: whoami
+      - run: cd
+      - name: Copy files via SSH
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: 18.139.145.31
+          username: ubuntu
+          key: ssh-action-runner
+          source: "build/*"
+          target: "/var/www/test/html"
       # - run: sudo cp -r . /var/www/test/html
       # - run: sudo service nginx restart
