--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Copy files via SSH
         uses: appleboy/scp-action@v0.1.3
         with:
-          host: 18.139.145.31
-          username: ubuntu
-          key: ssh-action-runner
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "build/*"
           target: "/var/www/test/html"
       # - run: sudo cp -r . /var/www/test/html
