--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-owl-carousel": "^2.3.3"
+    "react-grid-gallery": "^1.0.1",
+    "react-owl-carousel": "^2.3.3",
+    "yet-another-react-lightbox": "^3.21.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
