--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,15 +21,4 @@ jobs:
           USER_NAME: ${{secrets.SSH_USERNAME}}
 
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-
-              # Now we have got the access of EC2 and we will start the deploy .
-              cd /home/ubuntu/my-wedding &&
-              git pull &&
-              yarn && 
-              yarn build &&
-              cd dist && 
-              sudo cp -r . /var/www/hungpn256.click/html &&
-              sudo service nginx restart
-              '
+          echo ${USER_NAME}@${HOSTNAME}
