--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,9 @@ jobs:
           USER_NAME: ${{secrets.SSH_USERNAME}}
 
         run: |
-          echo ${USER_NAME}@${HOSTNAME}
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+
+              # Now we have got the access of EC2 and we will start the deploy .
+              ls -a
+              '
