--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-owl-carousel": "^2.3.3",
+    "react-picture-mosaic": "^1.2.14",
     "yet-another-react-lightbox": "^3.21.4"
   },
   "devDependencies": {
