--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
     "react-picture-mosaic": "^1.2.14",
@@ -27,6 +28,7 @@
     "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
