--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-grid-gallery": "^1.0.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.27.0",
     "yet-another-react-lightbox": "^3.21.4"
   },
   "devDependencies": {
