--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-grid-gallery": "^1.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.27.0",
@@ -27,6 +27,7 @@
     "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
