--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-image-gallery": "^1.3.0",
     "react-lazy-load-image-component": "^1.6.2",
@@ -27,6 +28,7 @@
     "@eslint/js": "^9.9.0",
     "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-lazy-load-image-component": "^1.6.4",
